--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: CI/CD Pipeline
 
 on:
   push:
@@ -11,18 +11,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4 # Haalt de repository op
+    - uses: actions/checkout@v4 
     
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '18.x' 
+
     - name: Install dependencies
       run: npm install 
 
     - name: Build
-      run: npm run build 
+      run: npm run build
 
     - name: Run tests
-      run: npm test 
+      run: npm test
 
+  docker-deploy:
+    needs: test 
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4 # Haalt de repository op
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Build Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest .
+
+    - name: Push Docker image
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest
