--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,29 +11,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4 
+    - uses: actions/checkout@v4
     
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18.x' 
+        node-version: '18.x'
 
     - name: Install dependencies
-      run: npm install 
+      run: npm install
 
     - name: Build
       run: npm run build
 
-    - name: Run tests
-      run: npm test
+    - name: Run tests and generate coverage
+      run: npm test -- --coverage
+
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        projectBaseDir: .
+        args: "-Dsonar.javascript.lcov.reportPaths=coverage/lcov.info"
 
   docker-deploy:
-    needs: test 
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4 # Haalt de repository op
+      uses: actions/checkout@v4
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
