Added back sonar propeties for code coverage

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,13 @@ jobs:
     - name: Run tests and generate coverage
       run: npm test -- --coverage
 
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
+    -  name: SonarCloud Scan
+       uses: sonarsource/sonarcloud-github-action@master
+       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        projectBaseDir: .
-        args: "-Dsonar.javascript.lcov.reportPaths=coverage/lcov.info"
+       with:
+        args: "-Dsonar.projectKey=XYYLG_weddingplanner-back-end -Dsonar.organization=xyylg -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info"
+
 
   docker-deploy:
     needs: test
