--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,15 +28,11 @@ jobs:
       run: npm test -- --coverage
 
     - name: SonarCloud Scan
-      uses: sonarsource/sonarqube-scan-action@v1
+      uses: sonarsource/sonarcloud-github-action@master 
+      with:
+        projectBaseDir: . # De projectmap (root van je repository)
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: https://sonarcloud.io
-      with:
-        args: >
-          -Dsonar.projectKey=XYYLG_weddingplanner-back-end
-          -Dsonar.organization=xyylg
-          -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
     
 
   docker-deploy:
