--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,81 +1,55 @@
 name: CI/CD Pipeline
- 
 on:
-
   push:
-
     branches: [ master ]
-
   pull_request:
-
     branches: [ master ]
- 
 jobs:
-
   test:
-
     runs-on: ubuntu-latest
  
     steps:
-
-    - name: Checkout code
-
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4  # Haalt de repository op
  
-    - name: Setup Node.js
-
-      uses: actions/setup-node@v3
-
-      with:
-
-        node-version: '18.x'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
  
-    - name: Install dependencies
-
-      run: npm install
+      - name: Install dependencies
+        run: npm install
  
-    - name: Build project
-
-      run: npm run build
+      - name: Build
+        run: npm run build
  
-    - name: Run tests and generate coverage
-
-      run: npm test -- --coverage
+      - name: Run tests
+        run: npm test
  
-    - name: Install SonarScanner globally
-
-      run: npm install -g sonar-scanner
+      # Voeg de stappen voor SonarCloud-analyse toe
+      - name: Install SonarScanner globally
+        run: npm install -g sonar-scanner
  
-    - name: Run SonarCloud Analysis
-
-      env:
-
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-      run: sonar-scanner
+      - name: Run SonarCloud Analysis
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Zorg ervoor dat je SONAR_TOKEN hebt toegevoegd aan GitHub Secrets
+        run: sonar-scanner \
+          -Dsonar.organization=xyylg \
+          -Dsonar.projectKey=XYYLG_weddingplanner-back-end \
+          -Dsonar.host.url=https://sonarcloud.io 
  
   docker-deploy:
-
-    needs: test
-
+    needs: test  # Zorg ervoor dat de deploy pas wordt uitgevoerd na de test
     runs-on: ubuntu-latest
  
     steps:
-
-    - name: Checkout code
-
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4  # Haalt de repository op
  
-    - name: Log in to Docker Hub
-
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
  
-    - name: Build Docker image
-
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest .
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest .
  
-    - name: Push Docker image
-
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest
-
- 
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest
