--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,54 +1,56 @@
 name: CI/CD Pipeline
+
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+
 jobs:
   test:
     runs-on: ubuntu-latest
- 
+
     steps:
-      - uses: actions/checkout@v4  # Haalt de repository op
- 
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
- 
+
       - name: Install dependencies
         run: npm install
- 
-      - name: Build
+
+      - name: Build application
         run: npm run build
- 
+
       - name: Run tests
         run: npm test
- 
-      # Voeg de stappen voor SonarCloud-analyse toe
-      - name: Install SonarScanner globally
-        run: npm install -g sonar-scanner
- 
-      - name: Set up SonarCloud
-        uses: SonarSource/sonarcloud-github-action@v1
+
+      - name: SonarCloud Analysis
+        uses: sonarsource/sonarcloud-github-action@v1
         with:
-          organization: 'xyylg'
-          projectKey: 'XYYLG_weddingplanner-back-end'
-          token: ${{ secrets.SONAR_TOKEN }}
- 
+          entryPoint: 'sonar-scanner'
+          args: '-Dsonar.organization=xyylg -Dsonar.projectKey=XYYLG_weddingplanner-back-end -Dsonar.host.url=https://sonarcloud.io'
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   docker-deploy:
-    needs: test  # Zorg ervoor dat de deploy pas wordt uitgevoerd na de test
+    needs: test
     runs-on: ubuntu-latest
- 
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # Haalt de repository op
- 
+        uses: actions/checkout@v4
+
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
- 
+
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest .
- 
+
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest
