--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,8 +51,8 @@ jobs:
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
             -Dsonar.sources=src \
-            -Dsonar.tests=src\modules\guests\Unittests \
-            -Dsonar.typescript.lcov.reportPaths=coverage/lcov-report/index-lcov-report.json
+            -Dsonar.tests=Unittests \
+            -Dsonar.typescript.lcov.reportPaths=coverage/index-lcov.info \
 
       # Build de applicatie
       - name: Build the application
