--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,21 +38,23 @@ jobs:
           name: test-results
           path: coverage/
 
-      # SonarCloud Analyse
+            # SonarCloud Analyse
       - name: Analyze with SonarCloud
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          # Installeer de SonarScanner tool
-          npm install sonar-scanner --save-dev
-          ./node_modules/.bin/sonar-scanner \
-            -Dsonar.projectKey=XYYLG_weddingplanner-back-end \
-            -Dsonar.organization=xyylg \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-            -Dsonar.sources=src \
-            -Dsonar.tests=Unittests \
-            -Dsonar.typescript.lcov.reportPaths=coverage/index-lcov.info \
+              npm install sonar-scanner --save-dev
+              ./node_modules/.bin/sonar-scanner \
+                -Dsonar.projectKey=XYYLG_weddingplanner-back-end \
+                -Dsonar.organization=xyylg \
+                -Dsonar.host.url=https://sonarcloud.io \
+                -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+                -Dsonar.sources=src \
+                -Dsonar.tests=src/modules/guests/Unittests \
+                -Dsonar.test.inclusions=src/modules/guests/Unittests/**/*.spec.ts \
+                -Dsonar.exclusions=src/modules/guests/**/*.spec.ts \
+                -Dsonar.typescript.lcov.reportPaths=coverage/lcov-report/index-lcov-report.json
+    
 
       # Build de applicatie
       - name: Build the application
