Reverted changing path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,10 +53,8 @@ jobs:
                 -Dsonar.tests=src/modules/guests/Unittests \
                 -Dsonar.test.inclusions=src/modules/guests/Unittests/**/*.spec.ts \
                 -Dsonar.exclusions=src/modules/guests/**/*.spec.ts \
-                --Dsonar.typescript.lcov.reportPaths=coverage/lcov.info
-
+                -Dsonar.typescript.lcov.reportPaths=coverage/lcov-report/index-lcov-report.json
     
-
       # Build de applicatie
       - name: Build the application
         run: npm run build
