--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "./coverage",
     "coverageReporters": [
       "lcov",
       "text"
