--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Zet Node.js op
+      # Zet Node.js 18 op (of een andere versie die je gebruikt)
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -25,39 +25,36 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+
       # Voer tests uit
       - name: Run tests
-        run: npm test -- --coverage
+        run: npm test
 
-      # Controleer de inhoud van de coverage map
-      - name: Debug Coverage Directory
-        run: ls -la coverage/
-
-      # Upload testresultaten als artifact
+      #  Upload testresultaten als artifact
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: coverage/lcov.info
+          path: coverage/
 
-      # SonarCloud Analyse
+            # SonarCloud Analyse
       - name: Analyze with SonarCloud
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          npm install sonar-scanner --save-dev
-          ./node_modules/.bin/sonar-scanner \
-            -Dsonar.projectKey=XYYLG_weddingplanner-back-end \
-            -Dsonar.organization=xyylg \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-            -Dsonar.sources=src \
-            -Dsonar.tests=src/modules/guests/Unittests \
-            -Dsonar.test.inclusions=src/modules/guests/Unittests/**/*.spec.ts \
-            -Dsonar.exclusions=src/**/*.spec.ts \
-            -Dsonar.typescript.lcov.reportPaths=coverage/lcov.info
-
+              npm install sonar-scanner --save-dev
+              ./node_modules/.bin/sonar-scanner \
+                -Dsonar.projectKey=XYYLG_weddingplanner-back-end \
+                -Dsonar.organization=xyylg \
+                -Dsonar.host.url=https://sonarcloud.io \
+                -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+                -Dsonar.sources=src \
+                -Dsonar.tests=src/modules/guests/Unittests \
+                -Dsonar.test.inclusions=src/modules/guests/Unittests/**/*.spec.ts \
+                -Dsonar.exclusions=src/modules/guests/**/*.spec.ts \
+                -Dsonar.typescript.lcov.reportPaths=coverage/lcov.info \
+    
       # Build de applicatie
       - name: Build the application
         run: npm run build
@@ -67,18 +64,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repository
+      # Stap 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Log in bij DockerHub
+      # Stap 2: Log in bij DockerHub
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      # Bouw Docker image
+      # Stap 3: Bouw Docker image
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest .
 
-      # Push Docker image
+      # Stap 4: Push Docker image
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/weddingplanner-back-end:latest
