--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: coverage/
+          path: coverage/lcov.info/
 
             # SonarCloud Analyse
       - name: Analyze with SonarCloud
