--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: coverage/lcov.info/
+          path: coverage/lcov-report/lcov.info
+
+      - name: Debug Coverage Directory
+        run: ls -la coverage/
 
             # SonarCloud Analyse
       - name: Analyze with SonarCloud
