--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: coverage/lcov-report/lcov.info
+          path: src\coverage\lcov.info
 
       - name: Debug Coverage Directory
-        run: ls -la src
+        run: ls -la src/coverage
 
             # SonarCloud Analyse
       - name: Analyze with SonarCloud
