--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: src\coverage\lcov.info
+          path: src/coverage/lcov.info
 
       - name: Debug Coverage Directory
         run: ls -la src/coverage
