--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "ts-mockito": "^2.6.1"
+    "ts-mockito": "^2.6.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
