--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.4",
     "@prisma/client": "^6.5.0",
+    "auth0": "^4.25.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.5.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "prisma": "^6.5.0",
